# scheduler

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt
src/core/: main.cpp
src/gui/: calendar.cpp  calendar.hpp  calendar_panel.cpp  calendar_panel.hpp  const.hpp  event.cpp  event.hpp  event_creator.cpp  event_creator.hpp  main.cpp  main_widget.cpp
src/input/: example.xlsx
